Feat/scrape normalize hash (#113)
* Add mvn spotless:check step to backend CI for java formatting, apply formatting

* Rename backend ci.yml job to reflect newly added format checking/lint step, remove redundant mvn spotless:check step (since it's bound to the mvn -B verify step)

* introduce sha256-hash-based change detection of html content prior to genai service calls to rereduce ai work, plus optimize html content through jsoup stripping in thesis-service toreduce overall token usage

* Add missing baseUrl propagation to jsoup html sanitization utilities, add unit tests to verify hashing and html extraction behavior

* Replace hand rolled sha256 implementation with HexFormat-based implementation

* Format files using mvn spotless:apply

* match openapi expectations and error codes, plus better logging

* Add method to update hash in db separately to only call it after successful vector DB ingestion, adapt test behavior to new pipeline sequence
